--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <button>Add</button>
             </div>
             <div class="subtitle">
-                <span><span><img src="./images/seen.png" alt=""></span>Complete all tasks</span>
+                <span><span><img src="seen.png" alt=""></span>Complete all tasks</span>
                 <span>Clear completed</span>
             </div>
             <hr>
